20200119提交处理边界情况

--- a/src/notes/vuecourse/16.md
+++ b/src/notes/vuecourse/16.md
@@ -1,10 +1,10 @@
 :::snippet 访问根实例
 
-1. 在每个 new Vue 实例的子组件中，其根实例可以通过 $root 属性进行访问。 
-2. 所有的子组件都可以将这个实例作为一个全局 store 来访问或使用。
+1. 在每个`new Vue`实例的子组件中，其根实例可以通过`$root`属性进行访问。
+2. 所有的子组件都可以将这个实例作为一个全局`store`来访问或使用。
 
-> 对于 demo 或非常小型的有少量组件的应用来说这是很方便的。<br>
-> 在绝大多数情况下，强烈推荐使用 Vuex 来管理应用的状态。
+> 对于`demo`或非常小型的有少量组件的应用来说这是很方便的。<br>
+> 在绝大多数情况下，强烈推荐使用`Vuex`来管理应用的状态。
 
 ```html
 <div id="app">
@@ -56,60 +56,318 @@ new Vue({
 
 :::snippet 访问父级组件实例
 
-1. 和 $root 类似，$parent 属性可以用来从一个子组件访问父组件的实例。
-2. 它提供了一种机会，可以在后期随时触达父级组件，以替代将数据以 prop 的方式传入子组件的方式。
+1. 和`$root`类似，`$parent`属性可以用来从一个子组件访问父组件的实例。
+2. 它提供了一种机会，可以在后期随时触达父级组件，以替代将数据以`prop`的方式传入子组件的方式。
 
 > 在绝大多数情况下，触达父级组件会使得你的应用更难调试和理解，尤其是当你变更了父级组件的数据的时候。当我们稍后回看那个组件的时候，很难找出那个变更是从哪里发起的。<br>
 > 我们针对需要向任意更深层级的组件提供上下文信息时推荐依赖注入的原因。
 
 :::
 
-:::snippet 作用域插槽
+:::snippet 访问子组件实例或子元素
 
-> `slot-scope` 不再限制在`<template>`元素上使用，而可以用在插槽内的任何元素或组件上。
-> 解构 `slot-scope`
+1. 需要在`JavaScript`里直接访问一个子组件，你可以通过`ref`特性为这个子组件赋予一个`ID`引用。
+2. 当`ref`和`v-for`一起使用的时候，你得到的引用将会是一个包含了对应数据源的这些子组件的数组。
+
+> `$refs`只会在组件渲染完成之后生效，并且它们不是响应式的。这仅作为一个用于直接操作子组件的“逃生舱”——你应该避免在模板或计算属性中访问`$refs`。
 
 ```html
 <div id="app03">
-  <todo-list v-bind:todos="todos">
-    <template slot-scope="slotProps">
-      <span v-if="slotProps.todo.isComplete">√</span>
-      {{ slotProps.todo.text }}
-    </template>
-  </todo-list>
-  <hr />
-  <todo-list v-bind:todos="todos">
-    <template slot-scope="{ todo }">
-      <span v-if="todo.isComplete">✓</span>
-      {{ todo.text }}
-    </template>
-  </todo-list>
+  <base-input ref="usernameInput"></base-input>
 </div>
 ```
 
 ```javascript
-Vue.component("todo-list", {
-  props: ["todos"],
-  template: `
-                    <ul>
-                    <li  v-for="todo in todos" v-bind:key="todo.id">
-                    <slot v-bind:todo="todo">
-                    {{todo.text}}
-                    </slot>
-                    </li>
-                    </ul>
+Vue.component("base-input", {
+  props: ["value"],
+  template: `<input v-model="value"/>
                     `
 });
 app03 = new Vue({
   el: "#app03",
-  data: {
-    todos: [
-      { id: 1, text: "小白", isComplete: true },
-      { id: 2, text: "小强", isComplete: true },
-      { id: 3, text: "小明", isComplete: false },
-      { id: 4, text: "咪咪", isComplete: true },
-      { id: 5, text: "妹妹", isComplete: false }
-    ]
+  methods: {
+    // 用来从父级组件聚焦输入框
+    focus: function() {
+      this.$refs.input.focus();
+    }
+  }
+});
+```
+
+:::
+
+:::snippet 依赖注入
+
+1. `provide`选项允许我们指定我们想要提供给后代组件的数据/方法。
+2. 在任何后代组件里，我们都可以使用`inject`选项来接收指定的我们想要添加在这个实例上的属性
+3. 祖先组件不需要知道哪些后代组件使用它提供的属性
+4. 后代组件不需要知道被注入的属性来自哪里
+
+> 依赖注入的负面影响。它将你应用程序中的组件与它们当前的组织方式耦合起来，使重构变得更加困难。同时所提供的属性是非响应式的。<br>
+> 如果你想要共享的这个属性是你的应用特有的，而不是通用化的，或者如果你想在祖先组件中更新所提供的数据，那么这意味着你可能需要换用一个像`Vuex`这样真正的状态管理方案了。
+
+```html
+<div id="app03">
+  <base-input ref="usernameInput"></base-input>
+</div>
+```
+
+```javascript
+Vue.component("base-input", {
+  props: ["value"],
+  inject: ['getMap']
+  template: `<input v-model="value"/>
+                    `
+});
+app03 = new Vue({
+  el: "#app03",
+  methods: {
+    // 用来从父级组件聚焦输入框
+    focus: function() {
+      this.$refs.input.focus();
+    },
+    provide: function() {
+    return {
+      getMap: this.getMap
+    };
+  }
+  },
+
+});
+```
+
+:::
+
+:::snippet 程序化的事件侦听器
+
+1. `$emit`的用法，它可以被`v-on`侦听，但是`Vue`实例同时在其事件接口中提供了其它的方法。
+2. 通过`$on(eventName, eventHandler)`侦听一个事件
+3. 通过`$once(eventName, eventHandler)`一次性侦听一个事件
+4. 通过`$off(eventName, eventHandler)`停止侦听一个事件
+
+> 注意`Vue`的事件系统不同于浏览器的`EventTarget API`。<br>尽管它们工作起来是相似的，但是`$emit`、`$on`, 和`$off`并不是`dispatchEvent`、`addEventListener`和`removeEventListener`的别名。
+
+```html
+<div id="app03">
+  <base-input ref="usernameInput"></base-input>
+</div>
+```
+
+```javascript
+Vue.component("base-input", {
+  props: ["value"],
+  inject: ['getMap']
+  template: `<input v-model="value"/>
+                    `
+});
+app03 = new Vue({
+  el: "#app03",
+  methods: {
+    // 用来从父级组件聚焦输入框
+    focus: function() {
+      this.$refs.input.focus();
+    },
+    provide: function() {
+    return {
+      getMap: this.getMap
+    };
+  }
+  },
+
+});
+```
+
+:::
+
+:::snippet 递归组件
+
+1. 组件是可以在它们自己的模板中调用自身的。不过它们只能通过`name`选项来做这件事
+2. 确保递归调用是条件性的 (例如使用一个最终会得到`false`的`v-if`)。
+
+```html
+<div id="app03">
+  <base-input ref="usernameInput"></base-input>
+</div>
+```
+
+```javascript
+Vue.component("base-input", {
+  props: ["value"],
+  inject: ['getMap']
+  template: `<input v-model="value"/>
+                    `
+});
+app03 = new Vue({
+  el: "#app03",
+  methods: {
+    // 用来从父级组件聚焦输入框
+    focus: function() {
+      this.$refs.input.focus();
+    },
+    provide: function() {
+    return {
+      getMap: this.getMap
+    };
+  }
+  },
+
+});
+```
+
+:::
+
+:::snippet 组件之间的循环引用
+
+```html
+<div id="app03">
+  <base-input ref="usernameInput"></base-input>
+</div>
+```
+
+```javascript
+Vue.component("tree-folder", {
+  props: ["folder"],
+  template: `<p>
+  <span>{{ folder.name }}</span>
+  <tree-folder-contents :children="folder.children"/>
+</p>
+                    `
+});
+
+Vue.component("tree-folder-contents", {
+  props: ["children"],
+  template: `<ul>
+  <li v-for="child in children">
+    <tree-folder v-if="child.children" :folder="child"/>
+    <span v-else>{{ child.name }}</span>
+  </li>
+</ul>`
+});
+
+app03 = new Vue({
+  el: "#app03",
+  methods: {
+    // 用来从父级组件聚焦输入框
+    focus: function() {
+      this.$refs.input.focus();
+    },
+    provide: function() {
+      return {
+        getMap: this.getMap
+      };
+    },
+    beforeCreate: function() {
+      this.$options.components.TreeFolderContents = require("./tree-folder-contents.vue").default;
+    }
+  }
+});
+```
+
+:::
+
+:::snippet 内联模板
+
+1. 当`inline-template`这个特殊的特性出现在一个子组件上时，这个组件将会使用其里面的内容作为模板，而不是将其作为被分发的内容。
+2. 内联模板需要定义在`Vue`所属的`DOM`元素内。
+
+> `inline-template`会让模板的作用域变得更加难以理解。所以作为最佳实践，请在组件内优先选择`template`选项或`.vue`文件里的一个 `<template>`元素来定义模板。
+
+```html
+<div id="app03">
+  <my-component inline-template>
+    <div>
+      <p>These are compiled as the component's own template.</p>
+      <p>Not parent's transclusion content.</p>
+    </div>
+  </my-component>
+</div>
+```
+
+```javascript
+Vue.component("my-component", {
+  props: ["folder"],
+});
+
+
+
+app03 = new Vue({
+  el: "#app03",
+  methods: {
+
+    },
+  }
+});
+```
+
+:::
+
+:::snippet `X-Template`
+
+1. 另一个定义模板的方式是在一个`<script>`元素中，并为其带上`text/x-template`的类型，然后通过一个`id`将模板引用过去。
+2. `x-template`需要定义在`Vue`所属的`DOM`元素外。
+
+> 这些可以用于模板特别大的`demo`或极小型的应用，但是其它情况下请避免使用，因为这会将模板和该组件的其它定义分离开。
+
+```html
+<div id="app03">
+  <hello-world> </hello-world>
+</div>
+<script type="text/x-template" id="hello-world-template">
+  <p>Hello hello hello</p>
+</script>
+```
+
+```javascript
+
+Vue.component('hello-world', {
+  template: '#hello-world-template'
+})
+
+app03 = new Vue({
+  el: "#app03",
+  methods: {
+
+    },
+  }
+});
+```
+
+:::
+
+:::snippet 强制更新
+
+> 如果你发现你自己需要在`Vue`中做一次强制更新，99.9% 的情况，是你在某个地方做错了事。
+> 你可能还没有留意到数组或对象的变更检测注意事项，或者你可能依赖了一个未被`Vue`的响应式系统追踪的状态。
+> 然而，如果你已经做到了上述的事项仍然发现在极少数的情况下需要手动强制更新，那么你可以通过`$forceUpdate`来做这件事。
+
+:::
+
+:::snippet 通过`v-once`创建低开销的静态组件
+
+1. 渲染普通的`HTML`元素在`Vue`中是非常快速的，但有的时候你可能有一个组件，这个组件包含了大量静态内容。
+2. 在这种情况下，你可以在根元素上添加`v-once`特性以确保这些内容只计算一次然后缓存起来
+
+```html
+<div id="app03">
+  <terms-of-service> </terms-of-service>
+</div>
+```
+
+```javascript
+Vue.component('terms-of-service', {
+  template: `
+    <div v-once>
+      <h1>Terms of Service</h1>
+      ... a lot of static content ...
+    </div>
+  `
+})
+
+app03 = new Vue({
+  el: "#app03",
+  methods: {
+
+    },
   }
 });
 ```
