20200122提交处理边界值

--- a/src/notes/vuecourse/16.md
+++ b/src/notes/vuecourse/16.md
@@ -62,6 +62,41 @@ new Vue({
 > 在绝大多数情况下，触达父级组件会使得你的应用更难调试和理解，尤其是当你变更了父级组件的数据的时候。当我们稍后回看那个组件的时候，很难找出那个变更是从哪里发起的。<br>
 > 我们针对需要向任意更深层级的组件提供上下文信息时推荐依赖注入的原因。
 
+```html
+<div id="app-2">
+  <component-a>
+    <component-b></component-b>
+  </component-a>
+</div>
+```
+
+```javascript
+// 定义组件
+Vue.component("component-a", {
+  data: function() {
+    return { msg: "hi" };
+  },
+  template: ` <h1><slot></slot></h1>`
+});
+Vue.component("component-b", {
+  template: ` <div>
+    <p>$parent.msg:{{ $parent.msg  }}</p>
+    <p>$root.my_msg.message: {{$root.my_msg.message }}</p>
+    <p>$parent.msg === $root.my_msg.message:{{ $parent.msg === $root.my_msg.message }}</p>
+    </div>`
+});
+// Vue 根实例
+var app2 = new Vue({
+  el: "#app-2",
+  data: {
+    my_msg: {
+      id: 1,
+      message: "hello world"
+    }
+  }
+});
+```
+
 :::
 
 :::snippet 访问子组件实例或子元素
@@ -72,7 +107,7 @@ new Vue({
 > `$refs`只会在组件渲染完成之后生效，并且它们不是响应式的。这仅作为一个用于直接操作子组件的“逃生舱”——你应该避免在模板或计算属性中访问`$refs`。
 
 ```html
-<div id="app03">
+<div id="app-3">
   <base-input ref="usernameInput"></base-input>
 </div>
 ```
@@ -80,18 +115,27 @@ new Vue({
 ```javascript
 Vue.component("base-input", {
   props: ["value"],
-  template: `<input v-model="value"/>
-                    `
-});
-app03 = new Vue({
-  el: "#app03",
   methods: {
     // 用来从父级组件聚焦输入框
     focus: function() {
+      console.log("base-input的focus");
       this.$refs.input.focus();
+    }
+  },
+  template: `<input v-model="value" ref="input"/>
+                    `
+});
+let app03 = new Vue({
+  el: "#app-3",
+  methods: {
+    // 用来从父级组件聚焦输入框
+    focus: function() {
+      console.log("app03的focus");
+      this.$refs.usernameInput.focus();
     }
   }
 });
+app03.focus();
 ```
 
 :::
@@ -107,32 +151,69 @@ app03 = new Vue({
 > 如果你想要共享的这个属性是你的应用特有的，而不是通用化的，或者如果你想在祖先组件中更新所提供的数据，那么这意味着你可能需要换用一个像`Vuex`这样真正的状态管理方案了。
 
 ```html
-<div id="app03">
-  <base-input ref="usernameInput"></base-input>
+<div id="app-4">
+  <p>{{ title }}</p>
+  <son></son>
 </div>
 ```
 
 ```javascript
-Vue.component("base-input", {
-  props: ["value"],
-  inject: ['getMap']
-  template: `<input v-model="value"/>
-                    `
-});
-app03 = new Vue({
-  el: "#app03",
-  methods: {
-    // 用来从父级组件聚焦输入框
-    focus: function() {
-      this.$refs.input.focus();
-    },
-    provide: function() {
+let grandSon = {
+  inject: ["message", "messageSon", "handleShow"],
+  data() {
     return {
-      getMap: this.getMap
+      title: "孙组件"
     };
-  }
   },
-
+  methods: {},
+  template: `  <div>
+    <p>message：{{ message }}</p>
+    <p>messageSon：{{ messageSon }}</p>
+    <button @click="handleShow">点击</button>
+  </div>`
+};
+// 定义组件
+let son = {
+  components: {
+    grandSon
+  },
+  provide: function() {
+    return {
+      messageSon: "provided by son",
+      handleShow: this.handleShow
+    };
+  },
+  data() {
+    return {
+      title: "子组件"
+    };
+  },
+  methods: {
+    handleShow: function() {
+      console.log("provided show by son");
+    }
+  },
+  template: `  <div>
+    <p>{{ title }}</p>
+    <grand-son></grand-son>
+  </div>`
+};
+// Vue 根实例
+var app4 = new Vue({
+  el: "#app-4",
+  components: {
+    son
+  },
+  // provide选项提供变量
+  provide: {
+    message: "provided by father"
+  },
+  data() {
+    return {
+      title: "父组件"
+    };
+  },
+  methods: {}
 });
 ```
 
@@ -148,32 +229,49 @@ app03 = new Vue({
 > 注意`Vue`的事件系统不同于浏览器的`EventTarget API`。<br>尽管它们工作起来是相似的，但是`$emit`、`$on`, 和`$off`并不是`dispatchEvent`、`addEventListener`和`removeEventListener`的别名。
 
 ```html
-<div id="app03">
-  <base-input ref="usernameInput"></base-input>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="https://www.js-css.cn/jscode/date/date4/css/pikaday.css"
+/>
+<script
+  type="text/javascript"
+  src="https://www.js-css.cn/jscode/date/date4/js/pikaday.min.js"
+></script>
+<div id="app-5">
+  <input-datepicker></input-datepicker>
 </div>
 ```
 
 ```javascript
-Vue.component("base-input", {
-  props: ["value"],
-  inject: ['getMap']
-  template: `<input v-model="value"/>
-                    `
-});
-app03 = new Vue({
-  el: "#app03",
-  methods: {
-    // 用来从父级组件聚焦输入框
-    focus: function() {
-      this.$refs.input.focus();
-    },
-    provide: function() {
-    return {
-      getMap: this.getMap
-    };
-  }
+// 定义组件
+Vue.component("input-datepicker", {
+  mounted: function() {
+    this.attachDatepicker("startDateInput");
+    this.attachDatepicker("endDateInput");
   },
-
+  methods: {
+    attachDatepicker: function(refName) {
+      var picker = new Pikaday({
+        field: this.$refs[refName],
+        format: "YYYY/MM/DD"
+      });
+      console.log("created!!!");
+      this.$once("hook:beforeDestroy", function() {
+        picker.destroy();
+        console.log("destroyed!!!");
+      });
+    }
+  },
+  template: ` <div>
+                    <span>开始日期：</span><input ref="startDateInput"></input>
+                    <span>结束日期：</span><input ref="endDateInput"></input>
+                </div>
+           `
+});
+// Vue 根实例
+var app05 = new Vue({
+  el: "#app-5"
 });
 ```
 
@@ -185,32 +283,99 @@ app03 = new Vue({
 2. 确保递归调用是条件性的 (例如使用一个最终会得到`false`的`v-if`)。
 
 ```html
-<div id="app03">
-  <base-input ref="usernameInput"></base-input>
+<div class="tree-menu" id="app-6">
+  <ul v-for="menuItem in theModel">
+    <tree-menu :model="menuItem"></tree-menu>
+  </ul>
 </div>
 ```
 
 ```javascript
-Vue.component("base-input", {
-  props: ["value"],
-  inject: ['getMap']
-  template: `<input v-model="value"/>
-                    `
-});
-app03 = new Vue({
-  el: "#app03",
-  methods: {
-    // 用来从父级组件聚焦输入框
-    focus: function() {
-      this.$refs.input.focus();
-    },
-    provide: function() {
+// 定义组件
+// Vue.component('treeMenu', )
+let treeMenu = {
+  name: "treeMenu",
+  props: ["model"],
+  data() {
     return {
-      getMap: this.getMap
+      open: false
+    };
+  },
+  computed: {
+    hasChild() {
+      return this.model.children && this.model.children.length;
+    }
+  },
+  methods: {
+    toggle() {
+      if (this.hasChild) {
+        this.open = !this.open;
+      }
+    }
+  },
+  template: `
+        <li>
+    <span @click="toggle">
+      <i
+        v-if="hasChild"
+        class="icon"
+        v-bind:class="[open ? 'folder-open': 'folder' ]"
+      ></i>
+      <i v-if="!hasChild" class="icon file-text"></i>
+      {{model.menuName}}
+    </span>
+    <ul v-show="open" v-if="hasChild">
+      <tree-menu
+        v-for="(item,index) in model.children"
+        v-bind:model="item"
+        v-bind:key="index"
+      ></tree-menu>
+    </ul>
+  </li>
+           `
+};
+// Vue 根实例
+var app06 = new Vue({
+  el: "#app-6",
+  components: {
+    treeMenu
+  },
+  data() {
+    return {
+      theModel: [
+        {
+          id: "1",
+          menuName: "基础管理",
+          menuCode: "10",
+          children: [
+            {
+              menuName: "用户管理",
+              menuCode: "11"
+            },
+            {
+              menuName: "角色管理",
+              menuCode: "12",
+              children: [
+                {
+                  menuName: "管理员",
+                  menuCode: "121"
+                },
+                {
+                  menuName: "普通人",
+                  menuCode: "124"
+                }
+              ]
+            }
+          ]
+        },
+        {
+          id: "2",
+          menuName: "商品管理",
+          menuCode: ""
+        }
+      ]
     };
   }
-  },
-
 });
 ```
 
@@ -219,48 +384,184 @@ app03 = new Vue({
 :::snippet 组件之间的循环引用
 
 ```html
-<div id="app03">
-  <base-input ref="usernameInput"></base-input>
+<div id="app-7">
+  <tree-folder v-bind:folder="folder"></tree-folder>
 </div>
 ```
 
 ```javascript
+// 定义组件
 Vue.component("tree-folder", {
-  props: ["folder"],
-  template: `<p>
-  <span>{{ folder.name }}</span>
-  <tree-folder-contents :children="folder.children"/>
-</p>
-                    `
+  props: {
+    folder: Object
+  },
+  template: `
+                <p>
+                    <span>{{ folder.name }}</span>
+                    <tree-folder-contents v-bind:children="folder.children"></tree-folder-contents>
+                </p>
+          `
 });
-
 Vue.component("tree-folder-contents", {
-  props: ["children"],
-  template: `<ul>
-  <li v-for="child in children">
-    <tree-folder v-if="child.children" :folder="child"/>
-    <span v-else>{{ child.name }}</span>
-  </li>
-</ul>`
+  props: {
+    children: Array
+  },
+  template: `
+                <ul>
+                    <li v-for="child in children">
+                        <tree-folder v-if="child.children" v-bind:folder="child"></tree-folder>
+                        <span v-else>{{ child.name }}</span>
+                    </li>
+                </ul>
+           `
 });
 
-app03 = new Vue({
-  el: "#app03",
-  methods: {
-    // 用来从父级组件聚焦输入框
-    focus: function() {
-      this.$refs.input.focus();
-    },
-    provide: function() {
-      return {
-        getMap: this.getMap
-      };
-    },
-    beforeCreate: function() {
-      this.$options.components.TreeFolderContents = require("./tree-folder-contents.vue").default;
+// Vue 根实例
+var app07 = new Vue({
+  el: "#app-7",
+  data: {
+    folder: {
+      name: "基础管理",
+      children: [
+        {
+          name: "用户管理",
+          children: false
+        },
+        {
+          name: "角色管理",
+          children: [
+            {
+              name: "管理员",
+              children: false
+            },
+            {
+              name: "普通人",
+              children: false
+            }
+          ]
+        },
+        {
+          name: "商品管理",
+          children: false
+        }
+      ]
     }
   }
 });
+```
+
+:::
+
+:::snippet 组件之间的循环引用 异步`import`
+
+```html
+<template>
+  <ul>
+    <li v-for="folder in folders">
+      <tree-folder v-bind:folder="folder"></tree-folder>
+    </li>
+  </ul>
+</template>
+<script>
+  import TreeFolder from "./tree-folder";
+  export default {
+    data: function() {
+      return {
+        folders: [
+          {
+            id: "1",
+            name: "基础管理",
+            code: "10",
+            children: [
+              {
+                name: "用户管理",
+                code: "11"
+              },
+              {
+                name: "角色管理",
+                code: "12",
+                children: [
+                  {
+                    name: "管理员",
+                    code: "121"
+                  },
+                  {
+                    name: "CEO",
+                    code: "122"
+                  },
+                  {
+                    name: "普通人",
+                    code: "124"
+                  }
+                ]
+              }
+            ]
+          },
+          {
+            id: "2",
+            name: "商品管理",
+            code: ""
+          }
+        ]
+      };
+    },
+    components: {
+      TreeFolder
+    }
+  };
+</script>
+```
+
+`tree-folder.vue`
+
+```html
+<template>
+  <p>
+    <span>{{ folder.name }}</span>
+    <tree-folder-contents :children="folder.children"></tree-folder-contents>
+  </p>
+</template>
+<script>
+  // 官方文档：「在我们的例子中，将 tree-folder 组件做为切入起点。
+  // 我们知道制造矛盾的是 tree-folder-contents 子组件，所以我们在 tree-folder 组件的生命周期钩子函数 beforeCreate 中去注册 tree-folder-contents 组件」
+  export default {
+    props: ["folder"],
+    data: function() {
+      return {};
+    },
+    beforeCreate: function() {
+      // 官方文档给出的是require
+      // this.$options.components.TreeFolderContents = require('./tree-folder-contents.vue')
+      // 在基于vue-cli@2.8.1按照上面的写法还是会报错
+      // Failed to mount component: template or render function not defined.
+      // 所以我们应该改为基于es6的写法异步加载一个组件如下
+      this.$options.components.TreeFolderContents = () =>
+        import("./tree-folder-contents.vue");
+    }
+  };
+</script>
+```
+
+`tree-folder-contents.vue`
+
+```html
+<template>
+  <ul>
+    <li v-for="child in children">
+      <tree-folder v-if="child.children" :folder="child"></tree-folder>
+      <span v-else>{{ child.name }}</span>
+    </li>
+  </ul>
+</template>
+<script>
+  import TreeFolder from "./tree-folder.vue";
+  export default {
+    props: ["children"],
+    components: {
+      TreeFolder
+    }
+  };
+</script>
 ```
 
 :::
@@ -273,7 +574,7 @@ app03 = new Vue({
 > `inline-template`会让模板的作用域变得更加难以理解。所以作为最佳实践，请在组件内优先选择`template`选项或`.vue`文件里的一个 `<template>`元素来定义模板。
 
 ```html
-<div id="app03">
+<div id="app-8">
   <my-component inline-template>
     <div>
       <p>These are compiled as the component's own template.</p>
@@ -284,18 +585,10 @@ app03 = new Vue({
 ```
 
 ```javascript
-Vue.component("my-component", {
-  props: ["folder"],
-});
-
-
-
-app03 = new Vue({
-  el: "#app03",
-  methods: {
-
-    },
-  }
+Vue.component("my-component", {});
+// Vue 根实例
+var app08 = new Vue({
+  el: "#app-8"
 });
 ```
 
@@ -309,7 +602,7 @@ app03 = new Vue({
 > 这些可以用于模板特别大的`demo`或极小型的应用，但是其它情况下请避免使用，因为这会将模板和该组件的其它定义分离开。
 
 ```html
-<div id="app03">
+<div id="app09">
   <hello-world> </hello-world>
 </div>
 <script type="text/x-template" id="hello-world-template">
@@ -318,17 +611,12 @@ app03 = new Vue({
 ```
 
 ```javascript
+Vue.component("hello-world", {
+  template: "#hello-world-template"
+});
 
-Vue.component('hello-world', {
-  template: '#hello-world-template'
-})
-
-app03 = new Vue({
-  el: "#app03",
-  methods: {
-
-    },
-  }
+let app09 = new Vue({
+  el: "#app-9"
 });
 ```
 
@@ -348,7 +636,7 @@ app03 = new Vue({
 2. 在这种情况下，你可以在根元素上添加`v-once`特性以确保这些内容只计算一次然后缓存起来
 
 ```html
-<div id="app03">
+<div id="app-10">
   <terms-of-service> </terms-of-service>
 </div>
 ```
@@ -363,8 +651,8 @@ Vue.component('terms-of-service', {
   `
 })
 
-app03 = new Vue({
-  el: "#app03",
+let app10 = new Vue({
+  el: "#app-10",
   methods: {
 
     },
