20200312修改以前文档

--- a/src/notes/vuecourse/01.md
+++ b/src/notes/vuecourse/01.md
@@ -17,6 +17,7 @@
 `Vue.js`的核心是一个允许采用简洁的模板语法来声明式地将数据渲染进`DOM`的系统
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
   {{ message }}
 </div>
@@ -51,6 +52,7 @@ let app2 = new Vue({
 `v-if`指令控制切换一个元素是否显示
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-3">
   <p v-if="seen">现在你看到我了</p>
 </div>
@@ -69,6 +71,7 @@ let app3 = new Vue({
 `v-for`指令可以绑定数组的数据来渲染一个项目列表
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-4">
   <ol>
     <li v-for="todo in todos">
@@ -103,6 +106,7 @@ app4.todos.push({ text: "新项目" });
 `v-on`指令添加一个事件监听器
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-5">
   <p>{{ message }}</p>
   <button v-on:click="reverseMessage">逆转消息</button>
@@ -130,6 +134,7 @@ let app5 = new Vue({
 `v-model`指令，它能轻松实现表单输入和应用状态之间的双向绑定。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-6">
   <p>{{ message }}</p>
   <input v-model="message" />
@@ -170,6 +175,7 @@ let app7 = new Vue({
 ```
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-7">
   <ol>
     <!--
