--- a/src/notes/vuecourse/02.md
+++ b/src/notes/vuecourse/02.md
@@ -11,6 +11,7 @@ let vm = new Vue({
 :::snippet 数据与方法
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
   <p>{{ foo }}</p>
   <!-- 这里的 `foo` 不会更新！ -->
