--- a/src/notes/vuecourse/06.md
+++ b/src/notes/vuecourse/06.md
@@ -5,6 +5,7 @@
 3. `v-else`元素必须紧跟在带`v-if`或者`v-else-if`的元素的后面，否则它将不会被识别。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
   <h1 v-if="awesome">Vue is awesome!</h1>
   <h1 v-else>Oh no 😢</h1>
@@ -26,6 +27,7 @@ app.ok = false;
 :::snippet `<template>`元素上使用`v-if`条件渲染分组
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-2">
   <template v-if="ok">
     <h1>Title</h1>
@@ -54,6 +56,7 @@ let app2 = new Vue({
 `v-else-if`，顾名思义，充当`v-if`的`else-if 块`，可以连续使用：
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app3">
   <p v-if="type === '神'">
     神
@@ -85,6 +88,7 @@ let app3 = new Vue({
 3. `<label>`元素仍然会被高效地复用，因为它们没有添加 key 属性。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-4">
   <template v-if="loginType=='username'">
     <label> username</label>
@@ -122,6 +126,7 @@ let app4 = new Vue({
 > 注意，`v-show`不支持`<template>`元素，也不支持`v-else`。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-5">
   <template v-show="ok">
     <p>Paragraph 1</p>
