--- a/src/notes/vuecourse/07.md
+++ b/src/notes/vuecourse/07.md
@@ -6,6 +6,7 @@
 4. `v-for`还支持一个可选的第二个参数，即当前项的索引。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <ul id="example-1">
   <li v-for="item in items">
     {{ item.message }}
@@ -39,6 +40,7 @@ var example1 = new Vue({
 4. 在遍历对象时，是按`Object.keys()`的结果遍历，但是不能保证它的结果在不同的`JavaScript`引擎下是一致的。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="v-for-object">
   <ul class="demo">
     <li v-for="value in object">
@@ -79,6 +81,7 @@ let vForObject = new Vue({
 3. `key`它是`Vue`识别节点的一个通用机制
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div v-for="item in items" v-bind:key="item.id" id="app">
   {{item}}
 </div>
@@ -191,6 +194,7 @@ var colors3 = colors.slice(1, 4); //  green,blue,yellow
 2. 当你修改数组的长度时，例如：`vm.items.length = newLength`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <ul id="app-2">
   <li v-for="item in items"></li>
 </ul>
@@ -216,6 +220,7 @@ app2.items.splice(newLength); //响应性的 vm.items.length = newLength
 :::snippet 数组对象`for`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <ul id="app3">
   <li v-for="item in items">
     <p v-for="value in item">{{value}}</p>
@@ -255,6 +260,7 @@ let app3 = new Vue({
 2. 嵌套对象添加响应式属性
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <ul id="app-4">
     <li v-for="item in items">
        {{item}}
@@ -306,6 +312,7 @@ app5.student = Object.assign({}, app5.student, {
 :::snippet 显示过滤/排序结果
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <ul id="app-6">
   <li v-for="item in evenNumbers">
     {{item}}
@@ -346,6 +353,7 @@ let app6 = new Vue({
 > n 必须大于等于 1，从 1 开始到 n
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-7">
   <span v-for="n in 10">{{ n }} </span>
 </div>
@@ -362,6 +370,7 @@ let app7 = new Vue({
 :::snippet `v-for`on a`<template>`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <ul id="app-8">
   <template v-for="item in items">
     <li>{{ item.msg }}</li>
@@ -387,6 +396,7 @@ let app8 = new Vue({
 :::snippet `v-for`with`v-if`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-9">
   <ul v-if="items.length">
     <li v-for="item in items" v-if="item.isshow">
@@ -439,6 +449,7 @@ let app9 = new Vue({
 > 当在组件上使用`v-for`时，`key`现在是必须的。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="todo-list-example">
   <form v-on:submit.prevent="addNewTodo">
     <label for="new-todo">Add a todo</label>
