--- a/src/notes/vuecourse/09.md
+++ b/src/notes/vuecourse/09.md
@@ -18,6 +18,7 @@
 :::snippet 文本
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="example-1">
   <input v-model="message" placeholder="edit me" />
   <p>Message is: {{ message }}</p>
@@ -39,6 +40,7 @@ let example1 = new Vue({
 > 在文本区域插值 (`<textarea>{{text}}</textarea>`) 并不会生效，应用`v-model`来代替。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="example-2">
   <span>Multiline message is:</span>
   <p style="white-space: pre-line;">{{ message }}</p>
@@ -65,6 +67,7 @@ let example2 = new Vue({
 > `true-value`和 `false-value`特性并不会影响输入控件的`value`特性，因为浏览器在提交表单时并不会包含未被选中的复选框。<br/> 如果要确保表单中这两个值中的一个能够被提交，(比如`yes`或`no`)，请换用单选按钮。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="example-3">
   单个复选框:
   <br />
@@ -111,6 +114,7 @@ let example3 = new Vue({
 :::snippet 单选按钮
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="example-4">
   <input type="radio" id="one" value="One" v-model="picked" />
   <label for="one">One</label>
@@ -155,6 +159,7 @@ let example4 = new Vue({
 > 因此，更推荐像上面这样提供一个值为空的禁用选项。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="example-5">
   <select v-model="selected">
     <option disabled value="">请选择</option>
@@ -258,6 +263,7 @@ let example8 = new Vue({
 3. 想自动过滤用户输入的首尾空白字符，可以给`v-model`添加`trim`修饰符
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="example-9">
   <input v-model.lazy="message" placeholder="edit me" />
   <p>Message length: {{ message.length }}</p>
