--- a/src/notes/vuecourse/11.md
+++ b/src/notes/vuecourse/11.md
@@ -7,6 +7,7 @@
 > 建议 使用`kebab-case`。强烈推荐遵循`W3C`规范中的自定义组件名 (字母全小写且必须包含一个连字符)
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
   <my-component-name v-bind="post"></my-component-name>
   <MyComponentName v-bind="post"></MyComponentName>
@@ -28,6 +29,7 @@ let app = new Vue({ el: "#app" });
 :::snippet 全局注册
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="component-global">
   <component-a></component-a>
   <component-b></component-b>
@@ -53,6 +55,7 @@ let componentGlobal = new Vue({ el: "#component-global" });
 :::snippet 局部注册
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="component-local">
   <component-a></component-a>
   <component-b></component-b>
@@ -83,6 +86,7 @@ let componentLocal = new Vue({
 > 局部注册的组件在其子组件中不可用。例如，如果你希望`ComponentA`在`ComponentB`中可用，则你需要这样写
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="component-local-sub">
   <component-b></component-b>
 </div>
@@ -110,6 +114,7 @@ let componentLocalSub = new Vue({
 局部组件实例
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="component-local-demo"></div>
 ```
 
