--- a/src/notes/vuecourse/14.md
+++ b/src/notes/vuecourse/14.md
@@ -4,6 +4,7 @@
 > `<navigation-link>` 没有包含一个 `<slot>` 元素，则任何传入它的内容都会被抛弃
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="navigation-link-demo">
   <navigation-link url="/profile">
     <span class="fa fa-user">ceshi </span>
@@ -34,6 +35,7 @@ let navigationLinkDemo = new Vue({
 该插槽跟模板的其它地方一样可以访问相同的实例属性 (也就是相同的`作用域`)，而不能访问`<navigation-link>`的作用域。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="navigation-link-demo-2">
   <navigation-link url="/profile">
     Clicking here will send you to: {{ url }}
@@ -67,6 +69,7 @@ let navigationLinkDemo2 = new Vue({
 当组件渲染的时候，当`组件起始标签和结束标签之间没有内容`时，`<slot>后备内容</slot>` 显示`后备内容`。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="submit-button-demo">
   <!--渲染内容 <button type="submit"> Submit </button> -->
   <submit-button></submit-button>
@@ -92,6 +95,7 @@ let submitButtonDemo = new Vue({
 一个不带`name`的`<slot>`出口会带有隐含的名字`default`。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-layout-demo">
   <base-layout>
     <template v-slot:header>
@@ -150,6 +154,7 @@ let baseLayoutDemo = new Vue({
 插槽内容能够访问子组件中才有的数据。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="current-user-error-demo">
   <current-user-error>
     <!-- 上述代码不会正常工作，因为只有 <current-user-error> 组件可以访问到 user 而我们提供的内容是在父级渲染的。  -->
@@ -209,6 +214,7 @@ let currentUserDemo = new Vue({
 当被提供的内容只有默认插槽时，组件的标签才可以被当作插槽的模板来使用。这样我们就可以把`v-slot`直接用在组件上
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="current-user-demo-2">
   <current-user v-slot="slotProps">
     {{ slotProps.user.firstName }}
@@ -245,6 +251,7 @@ let currentUserDemo2 = new Vue({
 > 只要出现多个插槽，请始终为所有的插槽使用完整的基于`<template>`的语法
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="current-user-demo-3">
   <!-- 注意默认插槽的缩写语法不能和具名插槽混用，因为它会导致作用域不明确 -->
   <!-- 无效，会导致警告 -->
@@ -305,6 +312,7 @@ function (slotProps) {
 3. 用于插槽`prop`是`undefined`的情形
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="current-user-demo-4">
   <!-- 解构来传入具体的插槽 prop -->
   <current-user v-slot="{ user }">
@@ -348,6 +356,7 @@ let currentUserDemo4 = new Vue({
 动态指令参数也可以用在`v-slot`上，来定义动态的插槽名
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-layout-demo-2">
   <base-layout>
     <template v-slot:[dynamicSlotName]>
@@ -388,6 +397,7 @@ let baseLayoutDemo2 = new Vue({
 跟`v-on`和`v-bind`一样，`v-slot`也有缩写，即把参数之前的所有内容 (`v-slot:`) 替换为字符`#`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-layout-demo-3">
   <base-layout>
     <template #header>
@@ -460,6 +470,7 @@ let currentUserDemo5 = new Vue({
 插槽 prop 允许我们将插槽转换为可复用的模板，这些模板可以基于输入的 prop 渲染出不同的内容。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="todo-list-demo">
   <todo-list v-bind:todos="todos">
     <template v-slot:todo="{ todo }">
@@ -538,6 +549,7 @@ let todoListDemo = new Vue({
 > 父组件模板的所有东西都会在父级作用域内编译；子组件模板的所有东西都会在子级作用域内编译。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-layout-demo">
   <base-layout>
     <template slot="header">
@@ -587,6 +599,7 @@ let baseLayoutDemo = new Vue({
 > 解构 `slot-scope`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="discard-demo-2">
   <todo-list v-bind:todos="todos">
     <template slot-scope="slotProps">
