--- a/src/notes/vuecourse/15.md
+++ b/src/notes/vuecourse/15.md
@@ -1,6 +1,7 @@
 :::snippet 在动态组件上使用`keep-alive`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="dynamic-component-demo" class="demo">
   <button
     v-for="tab in tabs"
@@ -171,6 +172,7 @@ let dynamicComponentKeepAliveDemo = new Vue({
 :::snippet 异步组件
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="async-a-demo">
   async-a
   <async-a></async-a>
@@ -238,6 +240,7 @@ export default myComponent;
 异步组件工厂函数也可以返回一个如下格式的对象
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="my-component-demo">
   <my-component></my-component>
 </div>
@@ -274,6 +277,7 @@ new Vue({
 `MyComponent.vue`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <template>
   <div class="hv-snippet">
     <h2 class="hv-snippet--title">我是MyComponent组件</h2>
