--- a/src/notes/vuecourse/16.md
+++ b/src/notes/vuecourse/16.md
@@ -7,6 +7,7 @@
 > 在绝大多数情况下，强烈推荐使用`Vuex`来管理应用的状态。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
   <my-component> </my-component>
 </div>
@@ -63,6 +64,7 @@ new Vue({
 > 我们针对需要向任意更深层级的组件提供上下文信息时推荐依赖注入的原因。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-2">
   <component-a>
     <component-b></component-b>
@@ -107,6 +109,7 @@ var app2 = new Vue({
 > `$refs`只会在组件渲染完成之后生效，并且它们不是响应式的。这仅作为一个用于直接操作子组件的“逃生舱”——你应该避免在模板或计算属性中访问`$refs`。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-3">
   <base-input ref="usernameInput"></base-input>
 </div>
@@ -151,6 +154,7 @@ app03.focus();
 > 如果你想要共享的这个属性是你的应用特有的，而不是通用化的，或者如果你想在祖先组件中更新所提供的数据，那么这意味着你可能需要换用一个像`Vuex`这样真正的状态管理方案了。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-4">
   <p>{{ title }}</p>
   <son></son>
@@ -229,6 +233,7 @@ var app4 = new Vue({
 > 注意`Vue`的事件系统不同于浏览器的`EventTarget API`。<br>尽管它们工作起来是相似的，但是`$emit`、`$on`, 和`$off`并不是`dispatchEvent`、`addEventListener`和`removeEventListener`的别名。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <link
   rel="stylesheet"
   type="text/css"
@@ -283,6 +288,7 @@ var app05 = new Vue({
 2. 确保递归调用是条件性的 (例如使用一个最终会得到`false`的`v-if`)。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div class="tree-menu" id="app-6">
   <ul v-for="menuItem in theModel">
     <tree-menu :model="menuItem"></tree-menu>
@@ -384,6 +390,7 @@ var app06 = new Vue({
 :::snippet 组件之间的循环引用
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-7">
   <tree-folder v-bind:folder="folder"></tree-folder>
 </div>
@@ -455,6 +462,7 @@ var app07 = new Vue({
 :::snippet 组件之间的循环引用 异步`import`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <template>
   <ul>
     <li v-for="folder in folders">
@@ -515,6 +523,7 @@ var app07 = new Vue({
 `tree-folder.vue`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <template>
   <p>
     <span>{{ folder.name }}</span>
@@ -545,6 +554,7 @@ var app07 = new Vue({
 `tree-folder-contents.vue`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <template>
   <ul>
     <li v-for="child in children">
@@ -574,6 +584,7 @@ var app07 = new Vue({
 > `inline-template`会让模板的作用域变得更加难以理解。所以作为最佳实践，请在组件内优先选择`template`选项或`.vue`文件里的一个 `<template>`元素来定义模板。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-8">
   <my-component inline-template>
     <div>
@@ -602,6 +613,7 @@ var app08 = new Vue({
 > 这些可以用于模板特别大的`demo`或极小型的应用，但是其它情况下请避免使用，因为这会将模板和该组件的其它定义分离开。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app09">
   <hello-world> </hello-world>
 </div>
@@ -636,6 +648,7 @@ let app09 = new Vue({
 2. 在这种情况下，你可以在根元素上添加`v-once`特性以确保这些内容只计算一次然后缓存起来
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-10">
   <terms-of-service> </terms-of-service>
 </div>
