--- a/src/notes/vuecourse/03.md
+++ b/src/notes/vuecourse/03.md
@@ -8,6 +8,7 @@
 数据绑定最常见的形式就是使用`Mustache`语法 (双大括号) 的文本插值
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
   <p v-once>姓名 ：{{name}}</p>
   <p>年龄：{{age}}</p>
@@ -34,6 +35,7 @@ app.age = 20; // 年龄改成 20
 双大括号会将数据解释为普通文本，而非`HTML`代码。为了输出真正的`HTML`，你需要使用`v-html`指令
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-2">
   <p>Using mustaches: {{ rawHtml }}</p>
   <p>Using v-html directive: <span v-html="rawHtml"></span></p>
@@ -56,6 +58,7 @@ let app2 = new Vue({
 :::snippet 特性
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-3">
   <button v-bind:id="dynamicId">id是ceshidynamicId</button>
   <button v-bind:disabled="isButtonDisabled">Button</button>
@@ -79,6 +82,7 @@ let app3 = new Vue({
 :::snippet 使用 JavaScript 表达式
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-4">
   <p>{{ number + 1 }}</p>
   <p>{{ ok ? 'YES' : 'NO' }}</p>
@@ -116,6 +120,7 @@ let app4 = new Vue({
 3. 参数 一些指令能够接收一个“参数”，在指令名称之后以冒号表示。例如，`v-bind`指令可以用于响应式地更新`HTML`特性
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-5">
   <p v-if="seen">现在你看到我了</p>
   <div v-bind:id="'list-' + id">wd</div>
@@ -151,6 +156,7 @@ let app5 = new Vue({
 5. 对动态参数表达式的约束 动态参数表达式有一些语法约束，因为某些字符，如空格和引号，放在`HTML attribute`名里是无效的`DOM`中使用模板时 (直接在一个`HTML`文件里撰写模板)，还需要避免使用大写字符来命名键名，因为浏览器会把`attribute`名全部强制转为小写
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-6">
   <!--
 注意，参数表达式的写法存在一些约束，如之后的“对动态参数表达式的约束”章节所述。
@@ -192,6 +198,7 @@ let app6 = new Vue({
 2. `.prevent`修饰符告诉`v-on`指令对于触发的事件调用`event.preventDefault()`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <form v-on:submit.prevent="onSubmit" id="app-7">
   ...
   <button type="submit">表单提交</button>
@@ -216,6 +223,7 @@ let app7 = new Vue({
 `Vue`为`v-bind`和`v-on`这两个最常用的指令，提供了特定简写
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-8">
   <!-- 完整语法 -->
   <a v-bind:href="url">...</a>
