--- a/src/notes/vuecourse/04.md
+++ b/src/notes/vuecourse/04.md
@@ -4,6 +4,7 @@
 2. 只在相关依赖发生改变时它们才会重新求值。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="example">
   <p>Original message: "{{ message }}"</p>
   <p>Computed reversed message: "{{ reversedMessage }}"</p>
@@ -41,6 +42,7 @@ console.log(vm.reversedMessage); // => 'eybdooG'
 2. 方法 当触发重新渲染时，调用方法将总会再次执行函数。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app">
   <p>Original Message：{{message}}</p>
   <p>Computer Reverse Message：{{reversedMessage}}</p>
@@ -96,6 +98,7 @@ console.log(app.reversedFun()); //egassem indexMethod3
 更通用的方式来观察和响应 Vue 实例上的数据变动：侦听属性。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-2">
   <p>firstName：{{firstName}}</p>
   <p>lastName：{{lastName}}</p>
@@ -148,6 +151,7 @@ console.log(app2.lastName); // huang
 :::snippet 计算属性的`setter`和`getter`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-3">
   <p>firstName：{{firstName}}</p>
   <p>lastName：{{lastName}}</p>
@@ -210,6 +214,7 @@ app3.fullName = "huang xiqian";
 在这个示例中，使用`watch`选项允许我们执行异步操作 (访问一个`API`)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 因为 AJAX 库和通用工具的生态已经相当丰富，Vue 核心代码没有重复 -->
 <!-- 提供这些功能以保持精简。这也可以让你自由选择自己更熟悉的工具。 -->
 <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
