--- a/src/notes/vuecourse/05.md
+++ b/src/notes/vuecourse/05.md
@@ -5,6 +5,7 @@
 3. 绑定的数据对象不必内联定义在模板里
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 结果渲染为  <div id="app" class="static active"></div> -->
 <div
   id="app"
@@ -40,6 +41,7 @@ let app2 = new Vue({
 :::snippet 绑定`HTML Class`数组语法
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 结果渲染为 <div id="app-3" class="active text-danger"></div> -->
 <div id="app-3" v-bind:class="[activeClass, errorClass]"></div>
 <!-- 结果渲染为 <div id="app-4" class="text-danger"></div> -->
@@ -79,6 +81,7 @@ let app5 = new Vue({
 :::snippet 绑定`HTML Class`组件上
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-6">
   <!-- 结果渲染为 <p  class="foo bar baz boo"> 姓名：huang7000  年龄：18 </p> -->
   <my-component class="baz boo"></my-component>
@@ -115,6 +118,7 @@ let app6 = new Vue({
 :::snippet 绑定内联样式对象语法
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 结果渲染为 <div id="app-7" style="color:red;fontSize: 30px;" > </div> -->
 <div
   id="app-7"
@@ -139,6 +143,7 @@ let app7 = new Vue({
 > `CSS`属性名可以用驼峰式 (`camelCase`) 或短横线分隔 (`kebab-case`，记得用引号括起来) 来命名
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 结果渲染为 <div id="app-8" style="color:red;fontSize: 30px;" > </div> -->
 <div id="app-8" v-bind:style="styleObject"></div>
 ```
@@ -160,6 +165,7 @@ let app8 = new Vue({
 :::snippet 绑定内联样式数组语法
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 结果渲染为 <div id="app-9" style="color: red; width: 550px; font-size: 36px; border: 1px;"> </div> -->
 <div id="app-9" class="test" v-bind:style="[styleObject,mainObejct]"></div>
 ```
@@ -186,6 +192,7 @@ let app9 = new Vue({
 :::snippet 绑定内联样式组件上
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-10">
   <!-- 结果渲染为 <p  class="baz boo" style=" color:red;fontSize:36px;border:1px;"> 姓名：huang7000  年龄：18 </p> -->
   <component-demo
@@ -243,6 +250,7 @@ let app10 = new Vue({
 2. 只会渲染数组中最后一个被浏览器支持的值。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div :style="{ display: ['-webkit-box', '-ms-flexbox', 'flex'] }"></div>
 ```
 
