--- a/src/notes/vuecourse/10.md
+++ b/src/notes/vuecourse/10.md
@@ -4,6 +4,15 @@
 2. 一个组件的`data`选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝<br>
 3. 全局注册的`Vue.component('my-component-name', { ... options ...})`<br>
 
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="components-demo">
+  <button-counter></button-counter>
+  <button-counter></button-counter>
+  <button-counter></button-counter>
+</div>
+```
+
 ```javascript
 var buttonCounterData = {
   count: 0
@@ -12,10 +21,10 @@ var buttonCounterData = {
 Vue.component("button-counter", {
   // 一个组件的 data 选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝
   // 正确的写法
-  data: function () {
-      return {
-          count: 0
-      };
+  data: function() {
+    return {
+      count: 0
+    };
   },
   // 正确的写法
   // data: function () {
@@ -35,19 +44,12 @@ let componentsDemo = new Vue({
 });
 ```
 
-```html
-<div id="components-demo">
-  <button-counter></button-counter>
-  <button-counter></button-counter>
-  <button-counter></button-counter>
-</div>
-```
-
 :::
 
 :::snippet 通过`Prop`向子组件传递数据
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="blog-post-demo">
   <blog-post title="My journey with Vue"></blog-post>
   <blog-post title="Blogging with Vue"></blog-post>
@@ -86,6 +88,7 @@ let blogPostDemo = new Vue({
 > 它们在`IE`下并没有被支持，所以如果你需要在不 (经过`Babel`或`TypeScript`之类的工具) 编译的情况下支持`IE`，请使用折行转义字符取而代之。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="blog-post-root-demo">
   <blog-post
     v-for="post in posts"
@@ -137,6 +140,7 @@ let blogPostRootDemo = new Vue({
 2. 使用`$emit`的第二个参数来提供这个值,在父级组件监听这个事件的时候，我们可以通过`$event`访问到被抛出的这个值
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="blog-posts-events-demo" class="demo">
   <blog-post-event
     :style="{ fontSize: postFontSize + 'em',width: widthSize+'px', height: heightSize+'px',
@@ -213,6 +217,7 @@ let blogPostsEventsDemo = new Vue({
 :::snippet 自定义事件也可以用于创建支持`v-model`的自定义输入组件
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="custom-input-demo">
   custom-input
   <br />
@@ -250,6 +255,7 @@ let customInputDemo = new Vue({
 :::snippet 通过插槽分发内容
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="alert-box-demo">
   <alert-box>
     Something bad happened.
@@ -284,6 +290,7 @@ let alertBoxDemo = new Vue({
 :::snippet 动态组件
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="dynamic-component-demo">
   <button
     v-for="tab in tabs"
@@ -352,6 +359,7 @@ let dynamicComponentDemo = new Vue({
 > 如果我们从以下来源使用模板的话，这条限制是不存在的：字符串 (例如：`template: '...'`)、单文件组件 (`.vue`)、`<script type="text/x-template">`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="component-row">
   错误
   <table>
