--- a/src/notes/vuecourse/12.md
+++ b/src/notes/vuecourse/12.md
@@ -4,6 +4,7 @@
 > 字符串模板，那么这个限制就不存在了。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <h2>blog-post-a postTitle Dom:</h2>
 <div id="blog-post-dom-1">
   有效
@@ -93,6 +94,7 @@ let props = {
 :::snippet 传递静态或动态`Prop`
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!--传入一个静态的值-->
 <blog-post title="My journey with Vue"></blog-post>
 <!-- 动态赋予一个变量的值 -->
@@ -108,6 +110,7 @@ let props = {
 > 传入一个数字
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 即便`42`是静态的，我们仍然需要`v-bind`来告诉 Vue -->
 <!-- 这是一个 JavaScript 表达式而不是一个字符串。-->
 <blog-post v-bind:likes="42"></blog-post>
@@ -119,6 +122,7 @@ let props = {
 > 传入一个布尔值
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 包含该 prop 没有值的情况在内，都意味着`true`。-->
 <blog-post is-published></blog-post>
 <!-- 即便`false`是静态的，我们仍然需要`v-bind`来告诉 Vue -->
@@ -131,6 +135,7 @@ let props = {
 > 传入一个数组
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 即便数组是静态的，我们仍然需要`v-bind`来告诉 Vue -->
 <!-- 这是一个 JavaScript 表达式而不是一个字符串。-->
 <blog-post v-bind:comment-ids="[234, 266, 273]"></blog-post>
@@ -141,6 +146,7 @@ let props = {
 > 传入一个对象
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 即便对象是静态的，我们仍然需要`v-bind`来告诉 Vue -->
 <!-- 这是一个 JavaScript 表达式而不是一个字符串。-->
 <blog-post
@@ -259,6 +265,7 @@ Vue.component('blog-post', {
 > 一个非 prop 特性是指传向一个组件，但是该组件并没有相应`prop`定义的特性。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <!-- 一个 Bootstrap 插件使用了一个第三方的 <bootstrap-date-input> 组件，这个插件需要在其 <input> 上用到一个 data-date-picker 特性。我们可以将这个特性添加到你的组件实例上.
 这个 data-date-picker="activated" 特性就会自动添加到 <bootstrap-date-input> 的根元素上。
 -->
@@ -277,6 +284,7 @@ Vue.component('blog-post', {
 > 庆幸的是，`class`和`style`特性会稍微智能一些，即两边的值会被合并起来，从而得到最终的值：`form-control date-picker-theme-dark`。<br/>
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <bootstrap-date-input
   data-date-picker="activated"
   class="date-picker-theme-dark"
@@ -305,6 +313,7 @@ Vue.component("my-component", {
 > 适合配合实例的`$attrs`属性使用，该属性包含了传递给一个组件的特性名和特性值
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <base-input
   v-model="username"
   class="username-input"
