--- a/src/notes/vuecourse/13.md
+++ b/src/notes/vuecourse/13.md
@@ -6,6 +6,7 @@
 > 推荐始终使用 kebab-case 的事件名。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <h2>blog-post-a Dom:</h2>
 <div id="blog-post-dom">
   <h4>my-component-a my-event 有效</h4>
@@ -91,6 +92,7 @@ let blogPostTemplate = new Vue({
 > 始终使用 kebab-case 的事件名。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-checkbox-demo">
   <base-checkbox v-model="lovingVue"></base-checkbox>
 </div>
@@ -130,6 +132,7 @@ let baseCheckboxDemo = new Vue({
 3. 根元素实际上是一个 `<label>`:``父级的 .native 监听器将静默失败。它不会产生任何报错，但是 onFocus 处理函数不会如你预期地被调用。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-input-error-demo">
   <base-input
     v-model="label"
@@ -172,6 +175,7 @@ let baseInputErrorDemo = new Vue({
 Vue 提供了一个 \$listeners 属性，它是一个对象，里面包含了作用在这个组件上的所有监听器。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-input-demo">
   <base-input
     v-model="label"
@@ -235,6 +239,7 @@ let baseInputDemo = new Vue({
 > 将 v-bind.sync 用在一个字面量的对象上，例如 v-bind.sync=”{ title: doc.title }”，是无法正常工作的，因为在解析一个像这样的复杂表达式的时候，有很多边缘情况需要考虑。
 
 ```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="base-document-demo">
   <text-document
     v-bind:title="doc.title"
