--- a/src/notes/vuecourse/18.md
+++ b/src/notes/vuecourse/18.md
@@ -1,362 +1,380 @@
-:::snippet 状态过渡
-数据元素本身的动效
+:::snippet 初始渲染的过渡
 
-1. 数字和运算
-2. 颜色的显示
-3. `SVG`节点的位置
-4. 元素的大小和其他的属性
-
-:::
-
-:::snippet 状态动画与侦听器
-
-通过侦听器我们能监听到的数值更新。
-
-```html
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-<div id="animated-number-demo">
-  <input v-model.number="number" type="number" step="10" />
-  <p>{{tweenLiteNumber}}</p>
-  <p>{{animatedNumber}}</p>
-</div>
-```
-
-```javascript
-let animatedNumberDemo = new Vue({
-  el: "#animated-number-demo",
-  data: {
-    number: 0,
-    tweenLiteNumber: 0
-  },
-  computed: {
-    animatedNumber: function() {
-      return this.tweenLiteNumber.toFixed(0);
-    }
-  },
-  watch: {
-    number: function(newValue) {
-      TweenLite.to(this.$data, 0.5, {
-        tweenLiteNumber: newValue
-      });
-    }
-  }
-});
-```
-
-:::
-
-:::snippet 侦听器颜色
+可以通过`appear attribute`设置节点在初始渲染的过渡
 
 ```html
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tween.js@16.3.4"></script>
-<script src="https://cdn.jsdelivr.net/npm/color-js@1.0.3"></script>
-<div id="animated-color-demo">
-  <input
-    v-model="colorValue"
-    v-on:key.enter="updateColor"
-    placeholder="请输入一个颜色"
-  />
-  <button v-on:click="updateColor">改变颜色</button>
-  <p>预览：</p>
-  <span
-    v-bind:style="{backgroundColor:tweenedCSSColor}"
-    class="animated-color-demo-preview"
-  ></span>
-  <p>输入的是：{{colorValueLast}}</p>
-  <p>转换成颜色：{{tweenedCSSColor}}</p>
-</div>
+<transition
+  appear
+  appear-class="custom-appear-class"
+  appear-to-class="custom-appear-to-class"
+  (2.1.8+)
+  appear-active-class="custom-appear-active-class"
+  id="transition-demo-1"
+>
+  <!-- ... -->
+</transition>
 ```
 
-```javascript
-var Color = net.brehaut.Color;
-let animatedColorDemo = new Vue({
-  el: "#animated-color-demo",
-  data: {
-    colorValue: "",
-    colorValueLast: "",
-    tweenedColor: {},
-    color: {
-      red: 0,
-      green: 0,
-      blue: 0,
-      alpha: 1
-    }
-  },
-  created: function() {
-    this.tweenedColor = Object.assign({}, this.color);
-  },
-  computed: {
-    tweenedCSSColor: function() {
-      return new Color({
-        red: this.tweenedColor.red,
-        green: this.tweenedColor.green,
-        blue: this.tweenedColor.blue,
-        alpha: this.tweenedColor.alpha
-      }).toCSS();
-    }
-  },
-  watch: {
-    color: function() {
-      function animate() {
-        if (TWEEN.update()) {
-          requestAnimationFrame(animate);
-        }
-      }
-      new TWEEN.Tween(this.tweenedColor).to(this.color, 750).start();
+自定义`JavaScript`钩子：
 
-      animate();
-    }
-  },
-  methods: {
-    updateColor: function() {
-      this.color = new Color(this.colorValue).toRGB();
-      this.colorValueLast = this.colorValue;
-      this.colorValue = "";
-    }
-  }
-});
-```
-
-```css
-.animated-color-demo-preview {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-}
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<transition
+  appear
+  v-on:before-appear="customBeforeAppearHook"
+  v-on:appear="customAppearHook"
+  v-on:after-appear="customAfterAppearHook"
+  v-on:appear-cancelled="customAppearCancelledHook"
+  id="transition-demo-2"
+>
+  <!-- ... -->
+</transition>
 ```
 
 :::
 
-:::snippet 动态状态过渡`SVG`多边形
+:::snippet 多个元素的过渡
+
+对于原生标签可以使用`v-if/v-else`
 
 ```html
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenLite.min.js"></script>
-<div id="svg-polygon-demo" class="demo">
-  <svg width="200" height="200" class="demo-svg">
-    <polygon :points="points" class="demo-polygon" />
-    <circle cx="100" cy="100" r="90" class="demo-circle" />
-  </svg>
-  <label>Sides: {{ sides }}</label>
-  <input
-    class="demo-range-input"
-    type="range"
-    min="3"
-    max="500"
-    v-model.number="sides"
-  />
-  <label>Minimum Radius: {{ minRadius }}%</label>
-  <input
-    class="demo-range-input"
-    type="range"
-    min="0"
-    max="90"
-    v-model.number="minRadius"
-  />
-  <label>Update Interval: {{ updateInterval }} milliseconds</label>
-  <input
-    class="demo-range-input"
-    type="range"
-    min="10"
-    max="2000"
-    v-model.number="updateInterval"
-  />
-</div>
+<transition id="transition-demo-3">
+  <table v-if="items.length > 0">
+    <!-- ... -->
+  </table>
+  <p v-else>Sorry, no items found.</p>
+</transition>
 ```
 
-```javascript
-let svgPolygoDemo = new Vue({
-  el: "#svg-polygon-demo",
-  data: function() {
-    var defaultSides = 10;
-    var stats = Array.apply(null, {
-      length: defaultSides
-    }).map(function() {
-      return 100;
-    });
-    return {
-      stats: stats,
-      points: generatePoints(stats),
-      sides: defaultSides,
-      minRadius: 50,
-      interval: null,
-      updateInterval: 500
-    };
-  },
-  watch: {
-    sides: function(newSides, oldSides) {
-      var sidesDifference = newSides - oldSides;
-      if (sidesDifference > 0) {
-        for (var i = 1; i <= sidesDifference; i++) {
-          this.stats.push(this.newRandomValue());
-        }
-      } else {
-        var absoluteSidesDifference = Math.abs(sidesDifference);
-        for (var i = 1; i <= absoluteSidesDifference; i++) {
-          this.stats.shift();
+> 当有相同标签名的元素切换时，需要通过`key attribute`设置唯一的值来标记以让`Vue`区分它们，否则`Vue`为了效率只会替换相同标签内部的内容。即使在技术上没有必要，给在`<transition>`组件中的多个元素设置`key`是一个更好的实践。
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<transition id="transition-demo-4">
+  <button v-if="create" key="create">
+    Create
+  </button>
+  <button v-else key="edit">
+    Edit
+  </button>
+</transition>
+```
+
+也可以通过给同一个元素的`key attribute`设置不同的状态来代替`v-if`和`v-else`
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<transition id="transition-demo-5">
+  <button v-bind:key="create">
+    {{ create ? 'Create' : 'Edit' }}
+  </button>
+</transition>
+```
+
+多个`v-if`的多个元素的过渡可以重写为绑定了动态属性的单个元素过渡。
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<transition id="transition-demo-6">
+  <button v-if="docState === 'create'" key="create">
+    Create
+  </button>
+  <button v-if="docState === 'edit'" key="edit">
+    Edit
+  </button>
+  <button v-if="docState === 'save'" key="save">
+    Save
+  </button>
+</transition>
+```
+
+等价于
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<transition id="transition-demo-7">
+  <button v-bind:key="docState">
+    {{ buttonMessage }}
+  </button>
+</transition>
+<script>
+  let transitionDemo7 = new Vue({
+    el: "#transition-demo-7",
+    data: {
+      docState: "save"
+    },
+    computed: {
+      buttonMessage: function() {
+        switch (this.docState) {
+          case "save":
+            return "Save";
+          case "edit":
+            return "Edit";
+          case "create":
+            return "Create";
         }
       }
-    },
-    stats: function(newStats) {
-      TweenLite.to(this.$data, this.updateInterval / 1000, {
-        points: generatePoints(newStats)
-      });
-    },
-    updateInterval: function() {
-      this.resetInterval();
     }
-  },
-  mounted: function() {
-    this.resetInterval();
-  },
-  methods: {
-    randomizeStats: function() {
-      var vm = this;
-      this.stats = this.stats.map(function() {
-        return vm.newRandomValue();
-      });
-    },
-    newRandomValue: function() {
-      return Math.ceil(this.minRadius + Math.random() * (100 - this.minRadius));
-    },
-    resetInterval: function() {
-      var vm = this;
-      clearInterval(this.interval);
-      this.randomizeStats();
-      this.interval = setInterval(function() {
-        vm.randomizeStats();
-      }, this.updateInterval);
-    }
-  }
-});
-
-function valueToPoint(value, index, total) {
-  var x = 0;
-  var y = -value * 0.9;
-  var angle = ((Math.PI * 2) / total) * index;
-  var cos = Math.cos(angle);
-  var sin = Math.sin(angle);
-  var tx = x * cos - y * sin + 100;
-  var ty = x * sin + y * cos + 100;
-  return {
-    x: tx,
-    y: ty
-  };
-}
-
-function generatePoints(stats) {
-  var total = stats.length;
-  return stats
-    .map(function(stat, index) {
-      var point = valueToPoint(stat, index, total);
-      return point.x + "," + point.y;
-    })
-    .join(" ");
-}
-```
-
-```css
-.demo-svg {
-  display: block;
-}
-
-.demo-polygon {
-  fill: #41b883;
-}
-
-.demo-circle {
-  fill: transparent;
-  stroke: #35495e;
-}
-
-.demo-range-input {
-  display: block;
-  width: 100%;
-  margin-bottom: 15px;
-}
+  });
+</script>
 ```
 
 :::
 
-:::snippet 把过渡放到组件里
+:::snippet 多个组件的过渡
 
 ```html
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/tween.js@16.3.4"></script>
-<div id="animated-integer-demo">
-  <input v-model.number="firstNumber" type="number" step="20" /> +
-  <input v-model.number="secondNumber" type="number" step="20" /> = {{ result }}
-  <p>
-    <animated-integer v-bind:value="firstNumber"></animated-integer> +
-    <animated-integer v-bind:value="secondNumber"></animated-integer> =
-    <animated-integer v-bind:value="result"></animated-integer>
-  </p>
+<div id="transition-demo-8">
+  <input id="a" type="radio" value="v-a" name="view" @click="view = 'v-a'" />
+  <label for="a">A</label>
+  <input id="b" type="radio" value="v-b" name="view" @click="view = 'v-b'" />
+  <label for="b">B</label>
+  <transition name="component-fade" mode="out-in">
+    <component v-bind:is="view"></component>
+  </transition>
 </div>
+<script>
+  var transitionDemo8 = new Vue({
+    el: "#transition-demo-8",
+    data: {
+      view: "v-a"
+    },
+    components: {
+      "v-a": {
+        template: "<div>Component A</div>"
+      },
+      "v-b": {
+        template: "<div>Component B</div>"
+      }
+    }
+  });
+</script>
+<style>
+  .component-fade-enter-active,
+  .component-fade-leave-active {
+    transition: opacity 0.3s ease;
+  }
+  .component-fade-enter, .component-fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
+  }
+</style>
 ```
 
-```javascript
-Vue.component("animated-integer", {
-  template: "<span>{{ tweeningValue }}</span>",
-  props: {
-    value: {
-      type: Number,
-      required: true
-    }
-  },
-  data: function() {
-    return {
-      tweeningValue: 0
-    };
-  },
-  watch: {
-    value: function(newValue, oldValue) {
-      this.tween(oldValue, newValue);
-    }
-  },
-  mounted: function() {
-    this.tween(0, this.value);
-  },
-  methods: {
-    tween: function(startValue, endValue) {
-      var vm = this;
+:::
 
-      function animate() {
-        if (TWEEN.update()) {
-          requestAnimationFrame(animate);
+:::snippet 过渡模式(进入和离开同时发生)
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="example1">
+  <transition name="no-mode-fade">
+    <button v-if="on" key="on" @click="on = false">
+      on
+    </button>
+    <button v-else key="off" @click="on = true">
+      off
+    </button>
+  </transition>
+</div>
+<script>
+  var example1 = new Vue({
+    el: "#example1",
+    data: {
+      on: false
+    }
+  });
+</script>
+<style>
+  .no-mode-fade-enter-active,
+  .no-mode-fade-leave-active {
+    transition: opacity 0.5s;
+  }
+
+  .no-mode-fade-enter,
+  .no-mode-fade-leave-active {
+    opacity: 0;
+  }
+</style>
+```
+
+:::
+
+:::snippet 过渡模式(元素绝对定位在彼此之上)
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="example2" class="no-mode-absolute-demo-wrapper">
+  <transition name="no-mode-absolute-fade">
+    <button v-if="on" key="on" @click="on = false">
+      on
+    </button>
+    <button v-else="" key="off" @click="on = true">
+      off
+    </button>
+  </transition>
+</div>
+<script>
+  var example2 = new Vue({
+    el: "#example2",
+    data: {
+      on: false
+    }
+  });
+</script>
+<style>
+  .no-mode-absolute-demo-wrapper {
+    position: relative;
+    height: 18px;
+  }
+  .no-mode-absolute-demo-wrapper button {
+    position: absolute;
+  }
+  .no-mode-absolute-fade-enter-active,
+  .no-mode-absolute-fade-leave-active {
+    transition: opacity 0.5s;
+  }
+  .no-mode-absolute-fade-enter,
+  .no-mode-absolute-fade-leave-active {
+    opacity: 0;
+  }
+</style>
+```
+
+:::
+
+:::snippet 过渡模式(加上`translate`滑动)
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div class="no-mode-translate-demo-wrapper" id="example3">
+  <transition name="no-mode-translate-fade">
+    <button v-if="on" key="on" @click="on = false">
+      on
+    </button>
+    <button v-else="" key="off" @click="on = true">
+      off
+    </button>
+  </transition>
+</div>
+<script>
+  var example3 = new Vue({
+    el: "#example3",
+    data: {
+      on: false
+    }
+  });
+</script>
+<style>
+  .no-mode-translate-demo-wrapper {
+       position: relative;
+       height: 18px;
+   }
+   .no-mode-translate-demo-wrapper button {
+       position: absolute;
+   }
+   .no-mode-translate-fade-enter-active, .no-mode-translate-fade-leave-active {
+       transition: all 1s;
+   }
+   .no-mode-translate-fade-enter, .no-mode-translate-fade-leave-active {
+       opacity: 0;
+   }
+   .no-mode-translate-fade-enter {
+       transform: translateX(31px);
+   }
+   .no-mode-translate-fade-leave-active {
+       transform: translateX(-31px);
+</style>
+```
+
+:::
+
+:::snippet 过渡模式(`out-in`模式)
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<div id="example4">
+  <transition name="with-mode-fade" mode="out-in">
+    <button v-if="on" key="on" @click="on = false">
+      on
+    </button>
+    <button v-else="" key="off" @click="on = true">
+      off
+    </button>
+  </transition>
+</div>
+<script>
+  var example4 = new Vue({
+    el: "#example4",
+    data: {
+      on: false
+    }
+  });
+</script>
+<style>
+  .with-mode-fade-enter-active,
+  .with-mode-fade-leave-active {
+    transition: opacity 0.5s;
+  }
+  .with-mode-fade-enter,
+  .with-mode-fade-leave-active {
+    opacity: 0;
+  }
+</style>
+```
+
+:::
+
+:::snippet 过渡模式(`in-out`模式)
+
+```html
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+<div id="example5" class="in-out-translate-demo-wrapper">
+  <transition name="with-mode-fade" mode="in-out">
+    <button v-if="on" key="on" @click="on = false">
+      on
+    </button>
+    <button v-else="" key="off" @click="on = true">
+      off
+    </button>
+  </transition>
+  <div>
+    <script>
+      var example5 = new Vue({
+        el: "#example5",
+        data: {
+          on: false
         }
+      });
+    </script>
+    <style>
+      .in-out-translate-demo-wrapper {
+        position: relative;
+        height: 18px;
       }
-
-      new TWEEN.Tween({
-        tweeningValue: startValue
-      })
-        .to(
-          {
-            tweeningValue: endValue
-          },
-          500
-        )
-        .onUpdate(function() {
-          vm.tweeningValue = this.tweeningValue.toFixed(0);
-        })
-        .start();
-
-      animate();
-    }
-  }
-});
-let animatedIntegerDemo = new Vue({
-  el: "#animated-integer-demo",
-  data: {
-    firstNumber: 20,
-    secondNumber: 40
-  },
-  computed: {
-    result: function() {
-      return this.firstNumber + this.secondNumber;
-    }
-  }
-});
+      .in-out-translate-demo-wrapper button {
+        position: absolute;
+      }
+      .in-out-translate-fade-enter-active,
+      .in-out-translate-fade-leave-active {
+        transition: all 5s;
+      }
+      .in-out-translate-fade-enter,
+      .in-out-translate-fade-leave-active {
+        opacity: 0;
+      }
+      .in-out-translate-fade-enter {
+        transform: translateX(31px);
+      }
+      .in-out-translate-fade-leave-active {
+        transform: translateX(-31px);
+      }
+    </style>
+  </div>
+</div>
 ```
 
 :::
