--- a/src/notes/typescriptcourse/01.md
+++ b/src/notes/typescriptcourse/01.md
@@ -11,6 +11,10 @@
 
 ```bash
  npm install -g typescript
+ npm i typescript -g
+ tsc --init
+ "dev": "tsc -watch -p ./",
+ npm run dev
 ```
 
 2. 构建你的第一个 TypeScript 文件 `greeter.ts`
